--- a/wercker.yml
+++ b/wercker.yml
@@ -51,7 +51,7 @@ deploy:
     - script:
         name: terraform remote S3
         code: |
-          terraform init -force-copy -backend=true -backend-config="bucket=your-terraform-state-bucket" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true"
+          terraform init -force-copy -backend=true -backend-config="bucket=haidv.terraform.state" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true"
           terraform plan
     - script:
         name: terraform apply
