--- a/wercker.yml
+++ b/wercker.yml
@@ -24,6 +24,7 @@ build:
         code: |
           terraform init -force-copy -backend=true -backend-config="bucket=haidv.terraform.state" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true"
           terraform plan
+          terraform show
     - script:
         name: create pull request
         code: |
@@ -53,6 +54,7 @@ deploy:
         code: |
           terraform init -force-copy -backend=true -backend-config="bucket=haidv.terraform.state" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true"
           terraform plan
+          terraform show
     - script:
         name: terraform apply
         code: |
