--- a/wercker.yml
+++ b/wercker.yml
@@ -23,7 +23,7 @@ build:
         name: terraform remote S3
         code: |
           terraform init -force-copy -backend=true -backend-config="bucket=haidv.terraform.state" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true" -backend-config="region=ap-southeast-1"
-          terraform plan
+          terraform plan -out=terraform.plan
     - script:
         name: create pull request
         code: |
@@ -52,10 +52,10 @@ deploy:
         name: terraform remote S3
         code: |
           terraform init -force-copy -backend=true -backend-config="bucket=haidv.terraform.state" -backend-config="key=terraform.tfstate" -backend-config="encrypt=true" -backend-config="region=ap-southeast-1"
-          terraform plan
+          terraform plan -out=terraform.plan
           terraform show
     - script:
         name: terraform apply
         code: |
           terraform state rm aws_instance.sample
-          terraform apply
+          terraform apply terraform.plan
